circle layout bug fixed

--- a/css/main.css
+++ b/css/main.css
@@ -208,12 +208,14 @@ h2{
     padding: 10px 15px;
     text-decoration: none;
     text-shadow: none;
+    font-weight:lighter;
 }
 
 .navbar .nav > li > a:hover,
 .navbar .nav > li > a:focus {
     color: #f38dab;
     outline:none;
+    font-weight:lighter;
 }
 
 .navbar-fixed-top{margin-bottom:0px;}
@@ -254,6 +256,19 @@ h2{
 .navbar .btn-navbar:active,.navbar .btn-navbar.active{
 	background-color:#ffffff \9;
 	}
+
+.sign_in_btn, .sign_in_btn:hover{
+	text-decoration: none;
+	cursor:pointer;
+}
+
+.sign_in_btn:hover{
+	color:#f33c72;
+}
+
+.language_toggle_btn{
+	cursor:pointer;
+}
 
 #big_image{
 	position:relative;
@@ -341,6 +356,7 @@ h2{
     border-radius: 50%;	
     behavior: url(css/PIE.htc);
     float:left;
+    cursor: pointer;
 }
 
 .featured_selected{
@@ -612,8 +628,14 @@ h2{
 	background-position: 0 -1px;
 }
 
-.circle_container a{
-	color:white;
+.rollover_link{
+	color:#f38dab;
+	text-decoration: underline;
+	cursor:pointer;
+}
+
+.rollover_link:hover{
+	color:#f33c72;
 }
 
 .gallery_circle{
@@ -1103,6 +1125,10 @@ h2{
 	position:relative;
 }
 
+#name_plus_btn, #close_friend_photos_btn, #select_action_button{
+	cursor:pointer;
+}
+
 .temp_name_input_container{
 	font-size:1em;
     display:none;
@@ -1519,25 +1545,21 @@ box-shadow: -1px 5px 11px -5px rgba(0,0,0,0.38);
 	letter-spacing:1px;
 	text-align:center;
 	text-transform: uppercase;
+	cursor:pointer;
 }
 
-.pink_btn_rollover{
-	font-size: 11px;
+.pink_btn:hover{
 	background-color:#f33c72;
 	color:white;
-	-moz-border-radius: 50px;
-    -webkit-border-radius: 50px;
-    -khtml-border-radius: 50px;
-    border-radius: 50px;
-    behavior: url(css/PIE.htc);
-    padding:6px 13px 6px 13px;
-    display:inline-block;
-    *display: inline;
-	zoom: 1;
-	font-weight:lighter;
-	letter-spacing:1px;
-	text-align:center;
-	text-transform: uppercase;
+	text-decoration: none
+}
+
+.pink_btn_dark{
+	background-color:#f33c72;
+}
+
+.pink_btn_dark:hover{
+	background-color: #c20e43;
 }
 
 .pink_filter_btn{
@@ -1545,10 +1567,6 @@ box-shadow: -1px 5px 11px -5px rgba(0,0,0,0.38);
     margin-bottom:10px;
 }
 
-.pink_filter_btn_rollover{
-    padding:6px 13px 4px 13px;
-    margin-bottom:10px;
-}
 
 #filter_instagram_btn{
 	margin-top:0;
@@ -1621,7 +1639,11 @@ box-shadow: -1px 5px 11px -5px rgba(0,0,0,0.38);
 
 #language_menu .language{
 	text-decoration: underline;
-	color:#333;
+	color:#777;
+}
+
+#language_menu .language:hover{
+	color:#f38dab;
 }
 
 #language_menu .language_divider{
